--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ idna==2.7
 MarkupSafe==1.0
 pystache==0.5.4
 python-dateutil==2.7.3
-requests==2.19.1
+requests>=2.20.0
 six==1.11.0
 urllib3==1.23
 wheel==0.24.0
